docs: add comprehensive generator testing strategy
- Create TESTING-GENERATORS.md with 6 testing strategies
- Add test:generator script for quick testing
- Set up test-blog directory with sample content
- Add test-generator-direct.mjs for local testing
- Include visual regression, snapshot, and performance testing approaches

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "turbo run build",
     "dev": "turbo run dev",
     "test": "turbo run test",
+    "test:generator": "node scripts/test-generator-direct.mjs",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,md,json}\"",
     "clean": "turbo run clean && rm -rf node_modules .turbo",
