--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,7 @@
         "tsconfig.json",
         "package.json"
       ],
-      "outputs": ["dist/**", ".next/**", "build/**"]
+      "outputs": ["dist/**", ".next/**", "build/**", "public/demos/**"]
     },
     "test": {
       "dependsOn": ["build"],
